This commit saves before editing all the comments and checking them

--- a/Lab03/RLab3_IPS.Rmd
+++ b/Lab03/RLab3_IPS.Rmd
@@ -79,7 +79,7 @@ IPS_sampledata_change_time
 2. From `IPS_sampledata`, keep only records for the six access points included in the `mac_locs` table, save these to `IPS_sampledata`.
 
 ```{r filter_by_macs}
-setwd("C:/Users/risin/OneDrive/Desktop/School/Classes/STAT410/Git Repos/Codinglab/Codinglab/Codinglab/Codinglab/Indoor-Positioning-System/Data-Visualization/Data-Visualization/Data-Visualization/Lab03")
+#etwd("C:/Users/risin/OneDrive/Desktop/School/Classes/STAT410/Git Repos/Codinglab/Codinglab/Codinglab/Codinglab/Indoor-Positioning-System/Data-Visualization/Data-Visualization/Data-Visualization/Lab03")
 mac_locs <- readr::read_table("accessPointLocations.txt")
 
 MAC_addresses<-c(mac_locs$Macs)
@@ -140,6 +140,7 @@ ggplot(combined_cordinates_with_groups, aes(x = X, y = Y , color = coordinates_o
 ```
 
 
+
 2. Use the resulting data set from exercise 4 from the *"Preparing the Data"* section, `group` and `summarize` it in the appropriate way to obtain the median, mean, standard deviation and any other summary statistic you consider useful to assess the signal strength for each combination of:  location, orientation (the binned version), and access point.
 
 ```{r summary_by_combo}
@@ -160,6 +161,20 @@ print(IPS_summary,n = 50, width = Inf)
 
 
 3. Using the data generated from the exercise above, produce one or more visualizations (at most 3) to explore the relationship between  orientation angle, location (relative to the access point), and signal strength, using `ggplot2` tools discussed in class. Briefly comment on the relationships you observe in your visualization(s) between orientation angle, distance between locations and access points, and signal strength. From your visualization(s), what cardinal direction can you relate the 0 degree orientation with?
+```{r}
+typeof(combined_cordinates_with_groups) # Identifies the type/structure we will be working with
+
+data4_use1<-combined_cordinates_with_groups # Copy the structure and data
+
+data4_use1<- data4_use1[c(2,17,19,20), ]  # Subset rows 2,17,19, and 20
+
+ggplot(data4_use1, aes(x = X, y = Y , color = coordinates_of)) +
+  geom_point() +
+  
+  scale_color_manual(values = c("Locations" = "black", "Access_Points" = "red")) + 
+  scale_x_continuous(limits = c(0, 35)) +
+  scale_y_continuous(limits = c(-3, 15))
+```
 
 ```{r cool_dat_vis}
 # your code here
@@ -234,26 +249,14 @@ ggplot(result3, aes(x = dist, y = mean_signal)) +
   facet_wrap(.~mac) +
   geom_smooth()
 ```
+
 ```{r}
 ggplot(result1, aes(x = dist, y = mean_signal, color = angle_diff)) +
   geom_point() +
   facet_wrap(.~mac) +
   geom_smooth()
 ```
-```{r}
-typeof(combined_cordinates_with_groups) # Identifies the type/structure we will be working with
 
-data4_use1<-combined_cordinates_with_groups # Copy the structure and data
-
-data4_use1<- data4_use1[c(2,17,19,20), ]  # Subset rows 2,17,19, and 20
-
-ggplot(data4_use1, aes(x = X, y = Y , color = coordinates_of)) +
-  geom_point() +
-  
-  scale_color_manual(values = c("Locations" = "black", "Access_Points" = "red")) + 
-  scale_x_continuous(limits = c(0, 35)) +
-  scale_y_continuous(limits = c(-3, 15))
-```
 ```{r}
 
 IPS_position_coordinates2 <- result1 %>%
@@ -268,7 +271,6 @@ ggplot(IPS_position_coordinates2, aes(x = angle_diff, y = mean_signal)) +
   geom_point() +
   facet_grid(mac~pos_coord)
 ```
-
 
 4. Replicate the plot attached in the link.
 
